# CNN_Skin_Cancer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  kaushik_sarkar_nn.ipynb  model-card.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
config/: default.yaml  isic_quickstart.yaml
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: CaseIntakeForm.tsx  CaseQueue.tsx  InsightCards.tsx  NotesPanel.tsx  PredictionSummary.tsx  RecentCases.tsx
scripts/: prepare_isic2019.py
src/cnn_skin_cancer/: __init__.py  cases.py  config.py  data.py  eval.py  model.py  predict.py  service.py  train.py  utils.py
tests/: test_cli_smoke.py  test_config.py  test_model_shapes.py
